--- a/WalkerCore/WalkerCore.csproj
+++ b/WalkerCore/WalkerCore.csproj
@@ -5,4 +5,8 @@
     <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="3.1.2" />
+  </ItemGroup>
+
 </Project>
