--- a/WalkerCore/WalkerCore.csproj
+++ b/WalkerCore/WalkerCore.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\DotNetTest\Data\Data.csproj" />
+    <ProjectReference Include="..\..\DotNetTest\Data\Walker.Data.csproj" />
   </ItemGroup>
 
 </Project>
