--- a/WalkerCommon/WalkerCommon/WalkerCommon.csproj
+++ b/WalkerCommon/WalkerCommon/WalkerCommon.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegexHelper.cs" />
+    <Compile Include="SqlHelper.cs" />
     <Compile Include="XMLHelper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
