--- a/WalkerCommon/WalkerCommon/WalkerCommon.csproj
+++ b/WalkerCommon/WalkerCommon/WalkerCommon.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="GenericityHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegexHelper.cs" />
     <Compile Include="SqlHelper.cs" />
